k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: supermarket
  labels:
    app.kubernetes.io/name: supermarket
    app.kubernetes.io/managed-by: terraform
