k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supermarket-deployment
  namespace: default
  labels:
    app: supermarket-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: supermarket-app
  template:
    metadata:
      labels:
        app: supermarket-app
    spec:
      containers:
        - name: supermarket-container
          image: 131708658201.dkr.ecr.ap-south-1.amazonaws.com/dev/super_market:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
