k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supermarket-service
  namespace: supermarket
  labels:
    app: supermarket-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: supermarket-app
